Fix auto away not restoring previous presence the first time

BUG: 301335
FIXED-IN: 0.6.0
REVIEW: 109301